- Added Jace::getCurrentThreadId() - Jace now requires Java 1.5 - Code now depends on Google Collections - Enum ordinal values are now accessible from C++ - Native threads attached to the JVM are now assigned the following name: "NativeThread-<id>" where <id> denotes the native thread id